--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">AssignmentTask</string>
+    <string name="level">Level</string>
+    <string name="leaderboard">Leaderboard</string>
 </resources>
